[package]
name = "murmurh"
version = "0.1.0"
edition = "2021"

[lib]
name = "murmurh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[profile.release]  # for profiling
debug = 1

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "main"
harness = false